Update metadata scheme

--- a/_originals/a023.md
+++ b/_originals/a023.md
@@ -6,7 +6,7 @@ author_gender: male
 year: 1815
 location: UK
 type: literary
-form: Poem
+form: Poetry
 fairy_tale: false
 ballad: false
 genre: Narrative Poem
