Updated metadata shown for originals

--- a/_adaptations/1175.md
+++ b/_adaptations/1175.md
@@ -78,7 +78,7 @@ Drama_data:
   location_1: London
   date_1: 11-27-1781
   no_nights_1: 26
-  theatre_manager_1: Richard Brinsley Sheridan,
+  theatre_manager_1: Richard Brinsley Sheridan
   actors_1:
   - name: William Smith
     role: Hamet
